# calhacks2025

./: .gitignore  Cargo.toml  README.md  curserve_client.py  demo.sh  memory_grep.py  mono_client.py  pyproject.toml  test_client.py  test_file_watch.py
ripgrep-mmap-server/: Cargo.toml  QUICKSTART.md  README.md  bench.sh  example_client.py  run.sh
ripgrep-mmap-server/examples/: benchmark.rs
ripgrep-mmap-server/src/: main.rs
src/: benchmark.rs  lib.rs  main.rs  service.rs
