[package]
name = "mono"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mem-search-service"
path = "src/service.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[dependencies]
# Ripgrep crates for searching
grep-searcher = "0.1"
grep-regex = "0.1"

# Memory mapping
memmap2 = "0.9"

# Directory walking and file filtering
ignore = "0.4"

# Error handling
anyhow = "1.0"

# Parallel search
rayon = "1.10"

# Serialization for IPC
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Thread communication
crossbeam-channel = "0.5"
