[package]
name = "ripgrep-mmap-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Ripgrep crates for searching
grep-searcher = "0.1"
grep-matcher = "0.1"
grep-regex = "0.1"

# Memory mapping
memmap2 = "0.9"

# Directory walking and file filtering
ignore = "0.4"
walkdir = "2"

# HTTP server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency
rayon = "1.10"

# HTTP client (for benchmarks)
reqwest = { version = "0.12", features = ["blocking", "json"] }
